prevent flash mesages being covered by bg element

--- a/app/static/stylesheets/style.css
+++ b/app/static/stylesheets/style.css
@@ -486,6 +486,7 @@ p.card-bio {
 
 .bg {
   position: absolute;
+  z-index: -1;
   top: 0;
   left: 0;
   right: 0;
